--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "eslint-plugin-import": "^2.13.0",
+    "history": "^4.7.2",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
@@ -28,6 +29,7 @@
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
