--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "eslint-plugin-import": "^2.13.0",
+    "glamor": "^2.20.40",
+    "glamorous": "^4.13.1",
     "history": "^4.7.2",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
