--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-first-router": "0.0.16-next",
     "webpack-cli": "^3.0.8"
