--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^1.0.0",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
     "react-hot-loader": "^4.3.3",
     "style-loader": "^0.21.0",
