--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "history": "^4.7.2",
+    "mini-css-extract-plugin": "^0.4.4",
     "path": "^0.12.7",
     "postcss": "^7.0.5",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
@@ -49,18 +51,19 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
+    "node-sass": "^4.9.4",
     "react-hot-loader": "^4.3.3",
     "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "serverless-s3-sync": "^1.7.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.0",
+    "webpack": "^4.22.0",
     "webpack-dev-server": "^3.1.4"
   },
   "browserslist": [
     "last 1 version",
     "> 1%",
-    "maintained node versions",
     "not dead"
   ]
 }
