--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
+    "mime": ">=1.4.1",
     "node-sass": "^4.9.4",
     "react-hot-loader": "^4.3.3",
     "resolve-url-loader": "^3.0.0",
