--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-first-router": "0.0.16-next",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "tar": "^4.4.8"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
