--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
-  "presets": ["react"],
-
-  "plugins": [
-    "transform-object-rest-spread"
+  "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
   ]
 }
