--- a/package.json
+++ b/package.json
@@ -8,59 +8,66 @@
   "main": "root.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --https --mode development",
-    "lint": "eslint -c .eslintrc.json bin src webpack"
+    "dev": "webpack-dev-server --mode development",
+    "lint": "eslint -c .eslintrc.json bin src webpack",
+    "deploy": "aws s3 sync ./dist s3://snowroom.codebravo.tech --delete && aws s3 cp s3://snowroom.codebravo.tech s3://snowroom.codebravo.tech --recursive --exclude '*' --include '*.gz' --metadata-directive REPLACE --content-encoding 'gzip'"
   },
   "dependencies": {
     "autoprefixer": "^9.2.0",
     "axios": "^0.18.0",
-    "eslint-plugin-import": "^2.13.0",
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "history": "^4.7.2",
+    "js-yaml": "^3.13.1",
     "mini-css-extract-plugin": "^0.4.4",
     "path": "^0.12.7",
     "postcss": "^7.0.5",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
+    "querystringify": "2.0.0",
     "ramda": "^0.25.0",
-    "react": "^16.4.1",
+    "react": "^16.7.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-first-router": "0.0.16-next",
-    "webpack-cli": "^3.0.8",
-    "tar": "^4.4.8"
+    "tar": "^4.4.8",
+    "webpack-cli": "^3.0.8"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-loader": "^7.1.5",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.3.14",
-    "babel-preset-env": "^1.6.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.3.13",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.7.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^1.1.11",
-    "mime": ">=1.4.1",
+    "file-loader": "^3.0.1",
+    "image-webpack-loader": "^4.6.0",
+    "mime": "^2.4.4",
     "node-sass": "^4.9.4",
+    "npm": "^6.5.0",
     "react-hot-loader": "^4.3.3",
     "resolve-url-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.22.0",
-    "webpack-dev-server": "^3.1.4"
+    "style-loader": "^0.23.1",
+    "uninstall": "0.0.0",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.28.2",
+    "webpack-dev-server": "^3.1.14"
   },
   "browserslist": [
     "last 1 version",
